@@ -1,5 +1,13 @@
 Changes with Apache 1.3.18
 
+  *) Win32/Netware: correct relative paths and eliminate trailing slash
+     in the -d serverroot argument.  -d Serverroot may be relative to 
+     the path of the Apache.exe file.  [William Rowe]
+
+  *) Win32; fix the ServerRoot as the path of the Apache.exe file.
+     Eliminates the requirement of a 'backup' registry key to locate
+     the server root.  [William Rowe]
+
   *) NetWare MOD_TLS fixes to disable nagles properly when making an SSL
      connection, and properly detect an SSL connection based on the port
      and work around the r->server->port 80 bug.  
